--- a/sentiment_analysis.ipynb
+++ b/sentiment_analysis.ipynb
@@ -1,1 +1,566 @@
-{"nbformat":4,"nbformat_minor":0,"metadata":{"colab":{"name":"sentiment_analysis.ipynb","provenance":[],"collapsed_sections":[],"authorship_tag":"ABX9TyPzdWYdS4N01lY2CMM4NDGL"},"kernelspec":{"name":"python3","display_name":"Python 3"},"language_info":{"name":"python"}},"cells":[{"cell_type":"markdown","source":["IMPORTS\n","\n","---\n","\n","\n","\n"],"metadata":{"id":"8gEVQHSCP4sC"}},{"cell_type":"code","execution_count":null,"metadata":{"id":"Vd8Xv-bbP2l3"},"outputs":[],"source":[""]},{"cell_type":"markdown","source":["DATASET\n","\n","---\n","\n"],"metadata":{"id":"7O0EOPeUQd4R"}},{"cell_type":"markdown","source":["EXPLORATORY DATA ANALYSIS\n","\n","---\n","\n"],"metadata":{"id":"lZnyZWKgQYpx"}},{"cell_type":"markdown","source":["DATA PREPROCESSING\n","\n","---\n","\n"],"metadata":{"id":"B5b8PhnMQutp"}},{"cell_type":"markdown","source":["TRAIN/TEST SPLIT\n","\n","---\n","\n"],"metadata":{"id":"5uX1jZHpQ3AJ"}},{"cell_type":"markdown","source":["### SIMPLE NAIVE BAYES"],"metadata":{"id":"GjndbhOQSHwP"}},{"cell_type":"markdown","source":["MODEL CONFIGURATION\n","\n","---\n","\n"],"metadata":{"id":"Kam4ZR5LScp-"}},{"cell_type":"markdown","source":["MODEL TRAINING\n","\n","---\n","\n"],"metadata":{"id":"eF5D8N0fSfRW"}},{"cell_type":"markdown","source":["MODEL EVALUATION\n","\n","---\n","\n"],"metadata":{"id":"uPrgRPQTShm3"}},{"cell_type":"markdown","source":["NEW PREDICTIONS\n","\n","---\n","\n"],"metadata":{"id":"Ppt2b8CiSjWu"}},{"cell_type":"markdown","source":["### CONVOLUTIONAL NEURAL NETWORK"],"metadata":{"id":"p6wEhMJIRPxw"}},{"cell_type":"markdown","source":["MODEL CONFIGURATION\n","\n","---\n","\n"],"metadata":{"id":"KsfmMGbsQ5JZ"}},{"cell_type":"markdown","source":["MODEL TRAINING\n","\n","---\n","\n"],"metadata":{"id":"YR78AqTJQ9fp"}},{"cell_type":"markdown","source":["MODEL EVALUATION\n","\n","---\n","\n"],"metadata":{"id":"ImUqeNmvQ-y_"}},{"cell_type":"markdown","source":["NEW PREDICTIONS\n","\n","---\n","\n"],"metadata":{"id":"rMS0NzQJRHIH"}},{"cell_type":"markdown","source":["### RECURRENT NEURAL NETWORK"],"metadata":{"id":"cb93z5GTR19Y"}},{"cell_type":"markdown","source":["MODEL CONFIGURATION\n","\n","---\n","\n"],"metadata":{"id":"B-5u45PmR-Ov"}},{"cell_type":"markdown","source":["MODEL TRAINING\n","\n","---\n","\n"],"metadata":{"id":"1QCui2nZSBan"}},{"cell_type":"markdown","source":["MODEL EVALUATION\n","\n","---\n","\n"],"metadata":{"id":"dakgke9cSDaP"}},{"cell_type":"markdown","source":["NEW PREDICTIONS\n","\n","---\n","\n"],"metadata":{"id":"gRk_FPvGSFtw"}}]}
+{
+  "nbformat": 4,
+  "nbformat_minor": 0,
+  "metadata": {
+    "colab": {
+      "name": "sentiment_analysis.ipynb",
+      "provenance": [],
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyNEzX6vV0hV7erb3vl81ep6"
+    },
+    "kernelspec": {
+      "name": "python3",
+      "display_name": "Python 3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "cells": [
+    {
+      "cell_type": "markdown",
+      "source": [
+        "IMPORTS\n",
+        "\n",
+        "---\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "8gEVQHSCP4sC"
+      }
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "Vd8Xv-bbP2l3"
+      },
+      "outputs": [],
+      "source": [
+        "import math\n",
+        "import re\n",
+        "\n",
+        "import numpy as np\n",
+        "import pandas as pd\n",
+        "\n",
+        "from bs4 import BeautifulSoup\n",
+        "\n",
+        "import tensorflow as tf\n",
+        "\n",
+        "from tensorflow.keras import layers\n",
+        "import tensorflow_datasets as tfds\n",
+        "\n",
+        "from sklearn.model_selection import train_test_split"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "DATASET\n",
+        "\n",
+        "---\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "7O0EOPeUQd4R"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "columns = [\"sentiment\", \"id\", \"date\", \"query\", \"user\", \"tweet\"]\n",
+        "\n",
+        "dataset = pd.read_csv('data.csv', \n",
+        "                      header=None,\n",
+        "                      names=columns,\n",
+        "                      engine=\"python\",\n",
+        "                      encoding=\"latin1\",\n",
+        "                      error_bad_lines=False)"
+      ],
+      "metadata": {
+        "id": "5PJMY-nVXPwZ",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "90acadb4-9e17-4529-adc5-ec45a0c3e72d"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.7/dist-packages/IPython/core/interactiveshell.py:2882: FutureWarning: The error_bad_lines argument has been deprecated and will be removed in a future version.\n",
+            "\n",
+            "\n",
+            "  exec(code_obj, self.user_global_ns, self.user_ns)\n",
+            "Skipping line 1278130: unexpected end of data\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dataset.drop([\"id\", \"date\", \"query\", \"user\"],\n",
+        "          axis=1,\n",
+        "          inplace=True)"
+      ],
+      "metadata": {
+        "id": "B4INwsLKg6-R"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dataset.head()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 206
+        },
+        "id": "g5lXd01VhEX8",
+        "outputId": "6b454211-ce00-4929-eddd-41fb096b05ba"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "\n",
+              "  <div id=\"df-b95f779d-ed70-4458-a0e5-1278a1815089\">\n",
+              "    <div class=\"colab-df-container\">\n",
+              "      <div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>sentiment</th>\n",
+              "      <th>tweet</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>0</td>\n",
+              "      <td>@switchfoot http://twitpic.com/2y1zl - Awww, t...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>0</td>\n",
+              "      <td>is upset that he can't update his Facebook by ...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>0</td>\n",
+              "      <td>@Kenichan I dived many times for the ball. Man...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>0</td>\n",
+              "      <td>my whole body feels itchy and like its on fire</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>0</td>\n",
+              "      <td>@nationwideclass no, it's not behaving at all....</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-b95f779d-ed70-4458-a0e5-1278a1815089')\"\n",
+              "              title=\"Convert this dataframe to an interactive table.\"\n",
+              "              style=\"display:none;\">\n",
+              "        \n",
+              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
+              "       width=\"24px\">\n",
+              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
+              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
+              "  </svg>\n",
+              "      </button>\n",
+              "      \n",
+              "  <style>\n",
+              "    .colab-df-container {\n",
+              "      display:flex;\n",
+              "      flex-wrap:wrap;\n",
+              "      gap: 12px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert {\n",
+              "      background-color: #E8F0FE;\n",
+              "      border: none;\n",
+              "      border-radius: 50%;\n",
+              "      cursor: pointer;\n",
+              "      display: none;\n",
+              "      fill: #1967D2;\n",
+              "      height: 32px;\n",
+              "      padding: 0 0 0 0;\n",
+              "      width: 32px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert:hover {\n",
+              "      background-color: #E2EBFA;\n",
+              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "      fill: #174EA6;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert {\n",
+              "      background-color: #3B4455;\n",
+              "      fill: #D2E3FC;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert:hover {\n",
+              "      background-color: #434B5C;\n",
+              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
+              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
+              "      fill: #FFFFFF;\n",
+              "    }\n",
+              "  </style>\n",
+              "\n",
+              "      <script>\n",
+              "        const buttonEl =\n",
+              "          document.querySelector('#df-b95f779d-ed70-4458-a0e5-1278a1815089 button.colab-df-convert');\n",
+              "        buttonEl.style.display =\n",
+              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "\n",
+              "        async function convertToInteractive(key) {\n",
+              "          const element = document.querySelector('#df-b95f779d-ed70-4458-a0e5-1278a1815089');\n",
+              "          const dataTable =\n",
+              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
+              "                                                     [key], {});\n",
+              "          if (!dataTable) return;\n",
+              "\n",
+              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
+              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
+              "            + ' to learn more about interactive tables.';\n",
+              "          element.innerHTML = '';\n",
+              "          dataTable['output_type'] = 'display_data';\n",
+              "          await google.colab.output.renderOutput(dataTable, element);\n",
+              "          const docLink = document.createElement('div');\n",
+              "          docLink.innerHTML = docLinkHtml;\n",
+              "          element.appendChild(docLink);\n",
+              "        }\n",
+              "      </script>\n",
+              "    </div>\n",
+              "  </div>\n",
+              "  "
+            ],
+            "text/plain": [
+              "   sentiment                                              tweet\n",
+              "0          0  @switchfoot http://twitpic.com/2y1zl - Awww, t...\n",
+              "1          0  is upset that he can't update his Facebook by ...\n",
+              "2          0  @Kenichan I dived many times for the ball. Man...\n",
+              "3          0    my whole body feels itchy and like its on fire \n",
+              "4          0  @nationwideclass no, it's not behaving at all...."
+            ]
+          },
+          "metadata": {},
+          "execution_count": 17
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dataset['sentiment'].unique()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Zl_wyFAcikFR",
+        "outputId": "7db0f814-c2b6-4d6f-b14d-d8e87a75a2d8"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([0, 4])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 19
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data_labels = dataset[\"sentiment\"].values\n",
+        "data_labels[data_labels == 4] = 1"
+      ],
+      "metadata": {
+        "id": "OCdl6JcYio8v"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dataset['sentiment'].unique()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8i-gSHXCi0P1",
+        "outputId": "d40d83ac-5e60-4033-a5b4-c0c718bf49be"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([0, 1])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 21
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "DATA PREPROCESSING\n",
+        "\n",
+        "---\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "B5b8PhnMQutp"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "DrdmASZyjbHD"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "TRAIN/TEST SPLIT\n",
+        "\n",
+        "---\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "5uX1jZHpQ3AJ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X = dataset[\"tweet\"]\n",
+        "y = dataset[\"sentiment\"]\n",
+        "\n",
+        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.2, random_state = 42)"
+      ],
+      "metadata": {
+        "id": "hbY9bt-JgNWQ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### SIMPLE NAIVE BAYES"
+      ],
+      "metadata": {
+        "id": "GjndbhOQSHwP"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "MODEL CONFIGURATION\n",
+        "\n",
+        "---\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "Kam4ZR5LScp-"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "MODEL TRAINING\n",
+        "\n",
+        "---\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "eF5D8N0fSfRW"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "MODEL EVALUATION\n",
+        "\n",
+        "---\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "uPrgRPQTShm3"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "NEW PREDICTIONS\n",
+        "\n",
+        "---\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "Ppt2b8CiSjWu"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### CONVOLUTIONAL NEURAL NETWORK"
+      ],
+      "metadata": {
+        "id": "p6wEhMJIRPxw"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "MODEL CONFIGURATION\n",
+        "\n",
+        "---\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "KsfmMGbsQ5JZ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "MODEL TRAINING\n",
+        "\n",
+        "---\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "YR78AqTJQ9fp"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "MODEL EVALUATION\n",
+        "\n",
+        "---\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "ImUqeNmvQ-y_"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "NEW PREDICTIONS\n",
+        "\n",
+        "---\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "rMS0NzQJRHIH"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### RECURRENT NEURAL NETWORK"
+      ],
+      "metadata": {
+        "id": "cb93z5GTR19Y"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "MODEL CONFIGURATION\n",
+        "\n",
+        "---\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "B-5u45PmR-Ov"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "MODEL TRAINING\n",
+        "\n",
+        "---\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "1QCui2nZSBan"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "MODEL EVALUATION\n",
+        "\n",
+        "---\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "dakgke9cSDaP"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "NEW PREDICTIONS\n",
+        "\n",
+        "---\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "gRk_FPvGSFtw"
+      }
+    }
+  ]
+}
