--- a/sentiment_analysis.ipynb
+++ b/sentiment_analysis.ipynb
@@ -6,7 +6,7 @@
       "name": "sentiment_analysis.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNEzX6vV0hV7erb3vl81ep6"
+      "authorship_tag": "ABX9TyOlgpUtQno/vVhoGUTOL3o4"
     },
     "kernelspec": {
       "name": "python3",
@@ -20,7 +20,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "IMPORTS\n",
+        "###IMPORTS\n",
         "\n",
         "---\n",
         "\n",
@@ -58,7 +58,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "DATASET\n",
+        "###DATASET\n",
         "\n",
         "---\n",
         "\n"
@@ -345,7 +345,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "DATA PREPROCESSING\n",
+        "###DATA PREPROCESSING\n",
         "\n",
         "---\n",
         "\n"
@@ -368,7 +368,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "TRAIN/TEST SPLIT\n",
+        "###TRAIN/TEST SPLIT\n",
         "\n",
         "---\n",
         "\n"
