--- a/sentiment_analysis.ipynb
+++ b/sentiment_analysis.ipynb
@@ -39,16 +39,8 @@
         "\n",
         "import re\n",
         "import nltk\n",
-        "from nltk.corpus import stopwords\n",
-        "from bs4 import BeautifulSoup\n",
         "\n",
-        "from sklearn.model_selection import train_test_split\n",
-        "from sklearn.metrics import confusion_matrix, accuracy_score, classification_report\n",
-        "# from sklearn.feature_extraction.text import CountVectorizer\n",
-        "\n",
-        "import tensorflow as tf\n",
-        "from tensorflow.keras.preprocessing.text import Tokenizer\n",
-        "from tensorflow.keras import layers"
+        "import tensorflow as tf"
       ]
     },
     {
@@ -71,9 +63,10 @@
       },
       "outputs": [],
       "source": [
+        "# this dataset doesn't containt labels for columns\n",
         "columns = [\"sentiment\", \"id\", \"date\", \"query\", \"user\", \"tweet\"]\n",
         "\n",
-        "dataset = pd.read_csv('data.csv', \n",
+        "dataset = pd.read_csv(\"data.csv\", \n",
         "                      header=None,\n",
         "                      names=columns,\n",
         "                      engine=\"python\",\n",
@@ -90,6 +83,7 @@
       },
       "outputs": [],
       "source": [
+        "# get rid of unneccessary columns\n",
         "dataset.drop([\"id\", \"date\", \"query\", \"user\"],\n",
         "          axis=1,\n",
         "          inplace=True)"
@@ -316,7 +310,7 @@
         }
       ],
       "source": [
-        "# neutral sentiment - not needed (for now)\n",
+        "# neutral sentiment - not needed\n",
         "dataset.loc[dataset[\"sentiment\"] == 2]"
       ]
     },
@@ -387,6 +381,7 @@
         }
       ],
       "source": [
+        "# check if the dataset is balanced\n",
         "labels = [\"positive\", \"negative\"]\n",
         "colors = [\"olivedrab\", \"silver\"]\n",
         "\n",
@@ -429,17 +424,19 @@
       },
       "outputs": [],
       "source": [
+        "from bs4 import BeautifulSoup\n",
+        "\n",
         "def clean_text(text):\n",
         "    # xml info\n",
         "    text = BeautifulSoup(text, \"lxml\").get_text()\n",
         "    # tags @name\n",
-        "    text = re.sub(r\"@[A-Za-z0-9]+\", ' ', text)\n",
+        "    text = re.sub(r\"@[A-Za-z0-9]+\", \" \", text)\n",
         "    # hyperlinks\n",
-        "    text = re.sub(r\"https?://[A-Za-z0-9./]+\", ' ', text)\n",
+        "    text = re.sub(r\"https?://[A-Za-z0-9./]+\", \" \", text)\n",
         "    # punctuation, except '\n",
-        "    text = re.sub(r\"[^a-zA-Z']\", ' ', text)\n",
+        "    text = re.sub(r\"[^a-zA-Z']\", \" \", text)\n",
         "    # double whitespaces\n",
-        "    text = re.sub(r\" +\", ' ', text)\n",
+        "    text = re.sub(r\" +\", \" \", text)\n",
         "    # lower-case\n",
         "    text = text.lower()\n",
         "  \n",
@@ -454,7 +451,7 @@
       },
       "outputs": [],
       "source": [
-        "data_clean = [clean_text(tweet) for tweet in dataset['tweet']]"
+        "data_clean = [clean_text(tweet) for tweet in dataset[\"tweet\"]]"
       ]
     },
     {
@@ -543,16 +540,21 @@
         }
       ],
       "source": [
-        "nltk.download('stopwords')\n",
+        "from nltk.corpus import stopwords\n",
         "\n",
-        "all_stopwords = stopwords.words('english')\n",
+        "nltk.download(\"stopwords\")\n",
+        "\n",
+        "all_stopwords = stopwords.words(\"english\")\n",
         "# negation is important, don't even know why it's considered a stop word\n",
-        "all_stopwords.remove('not')\n",
+        "all_stopwords.remove(\"not\")\n",
         "\n",
         "def remove_stopwords(text):\n",
+        "    # all words converted into a list of strings\n",
         "    text = text.split()\n",
+        "    # checked and removed\n",
         "    text = [word for word in text if not word in set(all_stopwords)]\n",
-        "    text = ' '.join(text)\n",
+        "    # joined back a single string\n",
+        "    text = \" \".join(text)\n",
         "    return text"
       ]
     },
@@ -637,6 +639,9 @@
       "source": [
         "# TENSORFLOW TOKENIZER -- to be used with CNN\n",
         "\n",
+        "from tensorflow.keras.preprocessing.text import Tokenizer\n",
+        "\n",
+        "# consider using **args instead of manually cleaning data\n",
         "tokenizer = Tokenizer()\n",
         "tokenizer.fit_on_texts(corpus)"
       ]
@@ -662,7 +667,10 @@
       "source": [
         "# BAG OF WORDS -- to be used with Naive Bayes\n",
         "\n",
-        "# vectorizer = CountVectorizer(max_features = 1500)\n",
+        "# from sklearn.feature_extraction.text import CountVectorizer\n",
+        "\n",
+        "# consider using **args instead of manually cleaning data\n",
+        "# vectorizer = CountVectorizer()\n",
         "# embedded_data = vectorizer.fit_transform(corpus)"
       ]
     },
@@ -724,6 +732,7 @@
       },
       "outputs": [],
       "source": [
+        "# pad to the longest tweet in the dataset\n",
         "max_length = max([len(tweet) for tweet in embedded_data])\n",
         "\n",
         "padded_data = tf.keras.preprocessing.sequence.pad_sequences(embedded_data,\n",
@@ -827,6 +836,7 @@
         }
       ],
       "source": [
+        "# check if shapes match\n",
         "X.shape"
       ]
     },
@@ -864,6 +874,8 @@
       },
       "outputs": [],
       "source": [
+        "from sklearn.model_selection import train_test_split\n",
+        "\n",
         "X_train, X_remaining, y_train, y_remaining = train_test_split(X, y, test_size = 0.2, random_state = 5)"
       ]
     },
@@ -875,6 +887,7 @@
       },
       "outputs": [],
       "source": [
+        "# second split for the validation set\n",
         "X_valid, X_test, y_valid, y_test = train_test_split(X_remaining, y_remaining, test_size = 0.5, random_state = 5)"
       ]
     },
@@ -1095,6 +1108,7 @@
       },
       "outputs": [],
       "source": [
+        "# for predictions\n",
         "new_tweet = \"I think @Mary is the hottest girl around!\"\n",
         "new_tweet = new_data_cleanup(new_tweet)"
       ]
@@ -1129,6 +1143,7 @@
       "outputs": [],
       "source": [
         "from sklearn.naive_bayes import GaussianNB\n",
+        "\n",
         "bayes_classifier = GaussianNB()"
       ]
     },
@@ -1215,18 +1230,10 @@
         }
       ],
       "source": [
+        "from sklearn.metrics import classification_report\n",
+        "\n",
+        "# Naive Bayes works cca. 20% better with the Bag of Words embedding model than with the tf-Tokenizer (51% vs 70% accuracy)\n",
         "print(classification_report(y_test, y_pred))"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "MGfY0JwMkFnK"
-      },
-      "outputs": [],
-      "source": [
-        "# Naive Bayes works cca. 20% better with the Bag of Words embedding model than with the tf-Tokenizer (51% vs 70% accuracy)"
       ]
     },
     {
@@ -1252,10 +1259,10 @@
         "output = bayes_classifier.predict(new_tweet)\n",
         "\n",
         "def prediction(output):\n",
-        "   if prediction[0] == 1:\n",
-        "     return 'positive'\n",
+        "   if output[0] == 1:\n",
+        "     return \"positive\"\n",
         "   else:\n",
-        "     return 'negative'"
+        "     return \"negative\""
       ]
     },
     {
@@ -1292,26 +1299,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "O6AeMaZVkFnK"
-      },
-      "outputs": [],
       "source": [
-        "T = X_train.shape[1]"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
+        "# hyperparameters\n",
+        "INPUT_SHAPE = X_train.shape[1]\n",
+        "VOCABULARY_SIZE = len(tokenizer.word_index)\n",
+        "EMBEDDING_DIMENSION = 128\n",
+        "FILTERS = 128\n",
+        "DROPOUT_RATE = 0.2\n",
+        "FFN_UNITS = 512"
+      ],
       "metadata": {
-        "id": "zO5XJVEnkFnM"
+        "id": "jvOE5tVEAGmq"
       },
-      "outputs": [],
-      "source": [
-        "word2idx = tokenizer.word_index\n",
-        "V = len(word2idx)"
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -1321,7 +1322,7 @@
       },
       "outputs": [],
       "source": [
-        "# 78% accuracy - try other params!\n",
+        "# 78% accuracy - try other params/architecture!\n",
         "\n",
         "from keras.models import Sequential\n",
         "from keras.layers import Dense\n",
@@ -1332,24 +1333,57 @@
         "from keras.layers import GlobalMaxPool1D\n",
         "from keras.layers import Dropout\n",
         "\n",
+        "# cnn = tf.keras.models.Sequential()\n",
+        "\n",
+        "# cnn.add(Input(shape=INPUT_SHAPE,))\n",
+        "# cnn.add(Embedding(VOCABULARY_SIZE+1, 20))\n",
+        "\n",
+        "# cnn.add(Conv1D(filters=32, kernel_size=3, activation=\"relu\"))\n",
+        "# cnn.add(MaxPool1D(pool_size=2))\n",
+        "# cnn.add(Dropout(DROPOUT_RATE))\n",
+        "\n",
+        "# cnn.add(Conv1D(filters=64, kernel_size=3, activation=\"relu\"))\n",
+        "# cnn.add(MaxPool1D(pool_size=2))\n",
+        "# cnn.add(Dropout(DROPOUT_RATE))\n",
+        "\n",
+        "# cnn.add(Conv1D(filters=128, kernel_size=3, activation=\"relu\"))\n",
+        "# cnn.add(GlobalMaxPool1D())\n",
+        "\n",
+        "# if number of classes == 2, units = 1, activation = \"sigmoid\", else number of classes == units, activation = \"softmax\"\n",
+        "# cnn.add(Dense(units=1, activation=\"relu\"))"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "cnn = tf.keras.models.Sequential()\n",
         "\n",
-        "cnn.add(Input(shape=T,))\n",
-        "cnn.add(Embedding(V+1, 20))\n",
+        "cnn.add(Input(INPUT_SHAPE,))\n",
+        "cnn.add(Embedding(VOCABULARY_SIZE, EMBEDDING_DIMENSION))\n",
         "\n",
-        "cnn.add(Conv1D(filters=32, kernel_size=3, activation='relu'))\n",
-        "cnn.add(MaxPool1D(pool_size=2))\n",
-        "cnn.add(Dropout(0.2))\n",
-        "\n",
-        "cnn.add(Conv1D(filters=64, kernel_size=3, activation='relu'))\n",
-        "cnn.add(MaxPool1D(pool_size=2))\n",
-        "cnn.add(Dropout(0.2))\n",
-        "\n",
-        "cnn.add(Conv1D(filters=128, kernel_size=3, activation='relu'))\n",
+        "cnn.add(Conv1D(filters=FILTERS, kernel_size=2, activation=\"relu\"))\n",
         "cnn.add(GlobalMaxPool1D())\n",
+        "cnn.add(Dropout(DROPOUT_RATE))\n",
         "\n",
-        "cnn.add(Dense(units=1, activation='relu'))"
-      ]
+        "cnn.add(Conv1D(filters=FILTERS, kernel_size=3, activation=\"relu\"))\n",
+        "cnn.add(GlobalMaxPool1D())\n",
+        "cnn.add(Dropout(DROPOUT_RATE))\n",
+        "\n",
+        "cnn.add(Conv1D(filters=FILTERS, kernel_size=4, activation=\"relu\"))\n",
+        "cnn.add(GlobalMaxPool1D())\n",
+        "cnn.add(Dropout(DROPOUT_RATE))\n",
+        "\n",
+        "cnn.add(Dense(units=FFN_UNITS, activation=\"relu\"))\n",
+        "cnn.add(Dropout(DROPOUT_RATE))\n",
+        "\n",
+        "# if number of classes == 2, units=1, activation=\"sigmoid\", else number of classes == units, activation=\"softmax\"\n",
+        "cnn.add(Dense(units=1, activation=\"sigmoid\"))"
+      ],
+      "metadata": {
+        "id": "zNHkckHB91Wj"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -1359,7 +1393,8 @@
       },
       "outputs": [],
       "source": [
-        "cnn.compile(optimizer='adam', loss='binary_crossentropy', metrics=['accuracy'])"
+        "# if number of classes == 2, loss=\"binary_crossentropy\", else \"sparse_categorical_crossentropy\", metrics=\"sparse_categorical_accuracy\", for example\n",
+        "cnn.compile(optimizer=\"adam\", loss=\"binary_crossentropy\", metrics=[\"accuracy\"])"
       ]
     },
     {
@@ -1433,7 +1468,8 @@
       },
       "outputs": [],
       "source": [
-        "stop = tf.keras.callbacks.EarlyStopping(monitor='val_loss', patience = 3)"
+        "# stop after 3 epochs of no improvement on validation loss\n",
+        "stop = tf.keras.callbacks.EarlyStopping(monitor=\"val_loss\", patience = 3)"
       ]
     },
     {
@@ -1466,7 +1502,10 @@
         }
       ],
       "source": [
-        "cnn.fit(x=X_train, y=y_train, epochs=10, validation_data=(X_valid, y_valid), batch_size=1000, callbacks=[stop])"
+        "BATCH_SIZE = 500\n",
+        "EPOCHS = 10\n",
+        "\n",
+        "cnn.fit(x=X_train, y=y_train, epochs=EPOCHS, validation_data=(X_valid, y_valid), batch_size=BATCH_SIZE, callbacks=[stop])"
       ]
     },
     {
@@ -1489,8 +1528,8 @@
       },
       "outputs": [],
       "source": [
-        "plt.plot(cnn.history['loss'], label='Loss')\n",
-        "plt.plot(cnn.history['val_loss'], label='Validation Loss')\n",
+        "plt.plot(cnn.history[\"loss\"], label=\"Loss\")\n",
+        "plt.plot(cnn.history[\"val_loss\"], label=\"Validation Loss\")\n",
         "plt.legend()\n",
         "plt.show()"
       ]
@@ -1503,8 +1542,8 @@
       },
       "outputs": [],
       "source": [
-        "plt.plot(cnn.history['accuracy'], label='Accuracy')\n",
-        "plt.plot(cnn.history['val_accuracy'], label='Validation accuracy')\n",
+        "plt.plot(cnn.history[\"accuracy\"], label=\"Accuracy\")\n",
+        "plt.plot(cnn.history[\"val_accuracy\"], label=\"Validation accuracy\")\n",
         "plt.legend()\n",
         "plt.show()"
       ]
@@ -1542,7 +1581,8 @@
       },
       "outputs": [],
       "source": [
-        "output = cnn.predict(new_tweet)"
+        "output = cnn.predict(new_tweet)\n",
+        "# output = cnn(new_tweet, training=False).numpy()"
       ]
     },
     {
@@ -1555,9 +1595,9 @@
       "source": [
         "def prediction(output):\n",
         "   if output[0][0] > 0.7:\n",
-        "     return 'positive'\n",
+        "     return \"positive\"\n",
         "   else:\n",
-        "     return 'negative'"
+        "     return \"negative\""
       ]
     },
     {
